@@ -1,0 +1,20 @@
+﻿using UnityEngine;
+using Cinemachine;
+
+/// <summary>
+/// An add-on module for Cinemachine Virtual Camera that preserves 
+/// LookAt target distance during blends
+/// </summary>
+[ExecuteInEditMode] [SaveDuringPlay] [AddComponentMenu("")] // Hide in menu
+public class CinemachineSphericalPositionBlend : CinemachineExtension 
+{
+    protected override void PostPipelineStageCallback(
+        CinemachineVirtualCameraBase vcam,
+        CinemachineCore.Stage stage, ref CameraState state, float deltaTime)
+    {
+        if (enabled && stage == CinemachineCore.Stage.Finalize)
+        {
+            state.BlendHint |= CameraState.BlendHintValue.PreserveLookAtDistance;
+        }
+    }
+}
