@@ -1,0 +1,13 @@
+fileFormatVersion: 2
+guid: 6431ef670c2ace441a6bd7ca0808fae9
+timeCreated: 1517334664
+licenseType: Pro
+MonoImporter:
+  externalObjects: {}
+  serializedVersion: 2
+  defaultReferences: []
+  executionOrder: 0
+  icon: {fileID: 2800000, guid: 5f2a108eb023faf43a809979fd3d38f2, type: 3}
+  userData: 
+  assetBundleName: 
+  assetBundleVariant: 
